<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ALERD</string>

    <string name="sign_in_as_user">Masuk Sebagai Pengguna</string>
    <string name="sign_in_as_responder">Masuk Sebagai Responder</string>
    <string name="hint_phone_number">Nomor Handphone</string>
    <string name="area_code">+62</string>
    <string name="hint_verification_code">Kode Verifikasi</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="status_code_sent">Kode Terkirim</string>
    <string name="status_verification_failed">Verifikasi Gagal</string>
    <string name="status_sign_in_failed">Gagal Masuk</string>
    <string name="instant_validation">Instant validation</string>
    <string name="user_status_problem">Maaf, nomor anda telah terdaftar sebagai</string>
    <string name="logout_success">Logout berhasil</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_time">Hello Time</string>
    <string name="waiting_responder" tools:ignore="TypographyEllipsis">Menunggu Responder ...</string>
    <string name="getting_costumer" tools:ignore="TypographyEllipsis">Mencari Keadaan Gawat Darurat ...</string>
    <string name="enter_submit_detail">Beri keterangan gawat darurat :</string>
    <string name="enter_done_detail">Beri keterangan pasca penanganan :</string>
    <string name="got_costumer">Terjadi Keadaan Gawat Darurat</string>
    <string name="emergency_done">Penanganan selesai</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>

    <string name="take">Take</string>
    <string name="skip">Skip</string>
    <string name="call">Call</string>
    <string name="message">SMS</string>
    <string name="done">Selesai</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>

    <string name="register_form">Formulir Pendaftaran</string>
    <string name="name">Nama</string>
    <string name="ktp">KTP</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="institute">Instansi</string>
</resources>
