<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context=".RegisterFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/register_form"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <TextView
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/name_field"
                android:layout_weight="2.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <TextView
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ktp"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/ktp_field"
                android:layout_weight="2.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <TextView
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/email_field"
                android:layout_weight="2.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <TextView
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/address_field"
                android:layout_weight="2.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <TextView
                android:id="@+id/institute_text"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/institute"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/institute_field"
                android:layout_weight="2.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>