<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserMainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/time_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/time_main"
        app:layout_constraintBottom_toTopOf="@+id/info_panel"
        app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
        android:id="@+id/info_panel"
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/costumer_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <Button
                android:id="@+id/call_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"/>
            <Button
                android:id="@+id/message_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"/>
            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>